small fix in alignment

--- a/css/size-selection-modal.css
+++ b/css/size-selection-modal.css
@@ -19,7 +19,7 @@
     background-color: rgba(65, 40, 7, 0.8);
 
     top: calc(50% - 280px);
-    left: calc(50% - 300px);
+    left: calc(50% - 350px);
 
     border-radius: 16px;
     border-width: 3px;
